[package]
name = "lambdaworks-math"
description = "Modular math library for cryptography"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0", optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
], optional = true }
proptest = { version = "1.1.0", optional = true }
winter-math = { package = "winter-math", version = "0.6.4", default-features = false, optional = true }
miden-core = { package = "miden-core", version = "0.7", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false }

# rayon
rayon = { version = "1.7", optional = true }

# cuda
cudarc = { version = "0.9.7", optional = true }

# metal (macOS only)
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }

lambdaworks-gpu = { workspace = true, optional = true }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
rand_chacha = "0.3.1"
criterion = "0.5.1"
const-random = "0.1.15"
iai-callgrind.workspace = true
proptest = "1.1.0"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3", rev = "5fcf8d7" }
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
rand = { version = "0.8.5", features = ["std"] }

[features]
default = ["parallel", "std"]
std = ["alloc", "serde?/std", "serde_json?/std", "dep:thiserror"]
alloc = []
parallel = ["dep:rayon"]
lambdaworks-serde-binary = ["dep:serde", "alloc"]
lambdaworks-serde-string = ["dep:serde", "dep:serde_json", "alloc"]
proptest = ["dep:proptest"]
winter_compatibility = ["winter-math", "miden-core"]
instruments = []
asm = []


# gpu
cuda = ["dep:cudarc", "dep:lambdaworks-gpu"]
metal = ["dep:metal", "dep:objc", "lambdaworks-gpu/metal"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[[bench]]
name = "criterion_elliptic_curve"
harness = false

[[bench]]
name = "iai_elliptic_curve"
harness = false

[[bench]]
name = "criterion_polynomial"
harness = false

[[bench]]
name = "iai_polynomial"
harness = false

[[bench]]
name = "criterion_field"
harness = false

[[bench]]
name = "iai_field"
harness = false

[[bench]]
name = "criterion_msm"
harness = false
required-features = ["parallel"]

[[bench]]
name = "criterion_fft"
harness = false

[[bench]]
name = "iai_fft"
harness = false

[[bench]]
name = "criterion_goldilocks_hybrid"
harness = false

[[bench]]
name = "criterion_goldilocks_comparison"
harness = false

[[bench]]
name = "criterion_asm_fields"
harness = false

[[bench]]
name = "criterion_external_comparisons"
harness = false
