[package]
name = "baby-snark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { workspace = true }
lambdaworks-crypto = { workspace = true }
rand_chacha = "0.3.1"
rand = "0.8.5"
