[package]
name = "bls-signature"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lambdaworks-math = { workspace = true }
lambdaworks-crypto = { workspace = true }
sha3 = { version = "0.10.8", default-features = false }
rand = "0.8.5"
