[package]
name = "merkle-tree-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "merkle-tree-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lambdaworks-crypto = { workspace = true }
lambdaworks-math = { workspace = true, features = ["lambdaworks-serde"] }
serde = { version = "1.0" }
serde_json = "1"
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }

[features]
verbose = ["lambdaworks-math/lambdaworks-serde-verbose"]