[package]
name = "merkle-tree-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "merkle-tree-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lambdaworks-crypto = { workspace = true, features = ["serde"]}
lambdaworks-math = { workspace = true, features = ["lambdaworks-serde-string"] }
serde = { version = "1.0" }
serde_json = "1"
bincode = { tag = "v2.0.1", git = "https://git.sr.ht/~stygianentity/bincode", features= ['serde'] }
