[package]
name = "prove-gnark-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prove-gnark-example"
path = "src/main.rs"

[dependencies]
lambdaworks-crypto = { workspace = true }
lambdaworks-math = { workspace = true, features = ["lambdaworks-serde-string"] }
lambdaworks-plonk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
