[package]
name = "prove-miden"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prove-miden"
path = "src/main.rs"

[dependencies]
lambdaworks-crypto = { workspace = true }
lambdaworks-math = { workspace = true, features = ["lambdaworks-serde-string"] }
lambdaworks-winterfell-adapter = { workspace = true }
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks" , branch = "miden-version", features = ["winter_compatibility"] }

serde = { version = "1.0" }
serde_json = "1"
bincode = { tag = "v2.0.1", git = "https://git.sr.ht/~stygianentity/bincode" }
miden-core = { package = "miden-core" , version = "0.7"}
miden-assembly = { package = "miden-assembly", version = "0.7" }
miden-processor = { package = "miden-processor", version = "0.7" }
miden-air = { package = "miden-air", version = "0.7"}
winter-prover = { package = "winter-prover", version = "0.6.4" }
