[package]
name = "prove-verify-circom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prove-verify-circom"
path = "src/main.rs"

[dependencies]
lambdaworks-crypto = { workspace = true }
lambdaworks-groth16-bls12-381 = { workspace = true }
lambdaworks-math = { workspace = true, features = ["lambdaworks-serde-string"] }
lambdaworks-circom-adapter-bls12-381 = { workspace = true }
serde = { version = "1.0" }
serde_json = "1"
