[package]
name = "xmss-signature"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "attack_demo"
path = "src/bin/attack_demo.rs"

[[bin]]
name = "basic_usage"
path = "src/bin/basic_usage.rs"

[dependencies]
lambdaworks-math = { workspace = true }
lambdaworks-crypto = { workspace = true }
sha2 = { version = "0.10", default-features = false }
rand = "0.8.5"
