[package]
name = "mini_air_vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mini-air-cli"
path = "src/main.rs"

[dependencies]
lambdaworks-math = { workspace = true }
lambdaworks-crypto = { workspace = true }
stark-platinum-prover = {workspace = true }
